# ntc-netbox-plugin-onboarding

./: .bandit.yml  .gitignore  .pydocstyle.ini  .pylintrc  .travis.yml  .yamllint.yml  FAQ.md  LICENSE  README.md  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
development/: Dockerfile  base_configuration.py  configuration.py  dev.env  docker-compose.yml
development/netbox_master/: configuration.py
development/netbox_v2.8.3/: configuration.py
development/netbox_v2.9.2/: configuration.py
docs/: testing_parsers.md
docs/examples/: example_ios_set_device_role.py
docs/release-notes/: version-2.0.md
netbox_onboarding/: __init__.py  admin.py  choices.py  constants.py  exceptions.py  filters.py  forms.py  helpers.py  metrics.py  models.py  navigation.py  netbox_keeper.py  netdev_keeper.py  onboard.py  release.py  tables.py  template_content.py  urls.py  views.py  worker.py
netbox_onboarding/api/: __init__.py  serializers.py  urls.py  views.py
netbox_onboarding/migrations/: 0001_initial.py  0002_onboardingdevice.py  0003_onboardingtask_change_logging_model.py  0004_create_onboardingdevice.py
netbox_onboarding/napalm_addons/: helpers.py  ios.py
netbox_onboarding/onboarding/: __init__.py  onboarding.py
netbox_onboarding/onboarding_extensions/: __init__.py  ios.py
netbox_onboarding/templates/netbox_onboarding/: device_onboarding_table.html  onboarding_task_edit.html  onboarding_tasks_list.html  onboardingtask.html  onboardingtask_ge210.html  onboardingtask_lt210.html
netbox_onboarding/tests/: __init__.py  test_api.py  test_models.py  test_napalm_addons_ios.py  test_netbox_keeper.py  test_netdev_keeper.py  test_onboard.py  test_onboarding_addons_ios.py  test_views.py  test_views_28.py  test_views_29.py  utilities.py
netbox_onboarding/tests/fixtures/: 00_test_data.txt  cli.1.show_version.0  cli.2.show_version.0
netbox_onboarding/utils/: credentials.py
